Fix #28 (tested with visible scrollbar)

--- a/server/public/stylesheets/chat-discussion.less
+++ b/server/public/stylesheets/chat-discussion.less
@@ -405,7 +405,7 @@
               overflow: hidden;
               display: inline-block;
               vertical-align: middle;
-              max-width: 130px;
+              max-width: 110px; // should take scrollbar width in consideration
               &::after {
                 content: "\f192";
                 font-family: FontAwesome;
